# backend

./: app.py  insert_table1.py  main.py  table1.py
DServer/: db.sqlite3  dockerfile  manage.py  requirements.txt
DServer/DServer/: asgi.py  settings.py  urls.py  wsgi.py
DServer/api/: urls.py  views.py
DServer/env/: pyvenv.cfg
DServer/product/: models.py
DServer/product/migrations/: 0001_initial.py
SQLAlchemy/: requirements.txt  table1.py  test.py
SQLAlchemy/myAlembic/versions/: 1f609df782ba_create_user_table.py  6ecb92515efe_change_column_data_type.py  fdb35b469a7d_create_user_table.py
User/: chris.py  script.py  test.py  test1.py
dbServer/: alembic.ini  main.py  mixins.py  order.py  requirements.txt  table1.py  table2.py  table3.py  table4.py  table_csv.py  table_json.py
dbServer/dataSource/: ogPeopleData.csv  ogPeopleData.json
dbServer/myAlembic/: env.py
dbServer/myAlembic/versions/: 01da5cf82d0e_change_column_data_type.py  15cb4e61dde3_change_column_data_type.py  1e968320adae_create_user_table.py  354b52dac8b3_create_user_table.py  3d42abb03325_change_column_data_type.py  611a0ab632f6_change_column_data_type.py  683cff919fe2_change_column_data_type.py  878078cbf8a4_change_column_data_type.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
myServer/: .coveragerc  MANIFEST.in  README.txt  development.ini  production.ini  pytest.ini  setup.py  testing.ini
myServer/myServer/: routes.py
myServer/myServer/alembic/: env.py
myServer/myServer/alembic/versions/: 20240216_74b5be8ced9f.py  20240229_6c366278fad5.py  20240229_6c728d4a103a.py
myServer/myServer/models/: __init__.py  mymodel.py  order_table.py
myServer/myServer/templates/: layout.mako
myServer/myServer/views/: default.py  notfound.py
myServer/tests/: conftest.py  test_functional.py  test_views.py
myServer2/myproject/: README.md  production.ini  requirements.txt  testing.ini
myServer2/myproject/tests/: test_functional.py  test_views.py
myproject/: MANIFEST.in  development.ini  myproject.sqlite  pyproject.toml  requirements.txt
myproject/env/: pyvenv.cfg
myproject/env/Scripts/: activate  activate.bat
myproject/myproject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
myproject/myproject/alembic/: env.py
myproject/myproject/alembic/versions/: 20240307_4713f4c836c8.py  20240307_99bc1cf414a6.py
myproject/myproject/models/: __init__.py
myproject/myproject/templates/: layout.mako
myproject/myproject/views/: default.py  notfound.py
myproject/tests/: conftest.py
newServer/: Dockerfile  MANIFEST.in  README.md  development.ini  production.ini  pyproject.toml  testing.ini
newServer/env/: pyvenv.cfg
newServer/env/Scripts/: Activate.ps1  activate  activate.bat
newServer/newServer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
newServer/newServer/alembic/: env.py
newServer/newServer/models/: __init__.py
newServer/newServer/templates/: layout.mako
newServer/newServer/views/: default.py  notfound.py
newServer/tests/: conftest.py  test_functional.py  test_views.py
server/: MANIFEST.in  README.md  app.py  db.json  development.ini  production.ini  pyproject.toml  requirements.txt  testing.ini
server/server/alembic/versions/: 20240308_4a658481dab9.py  20240308_6b65578b7f5f.py  20240308_775d70beef84.py
server/server/templates/: layout.mako
server/server/views/: default.py  notfound.py
server/tests/: conftest.py  test_views.py
